test/corpus/from_statement.txt
================================================================================
From import single
================================================================================
{% from "forms.html" import input %}
--------------------------------------------------------------------------------

(source_file
  (from_statement
    (statement_begin)
    (from_keyword)
    template: (string)
    (import_keyword)
    (import_name
      name: (identifier))
    (statement_end)))

================================================================================
From import multiple
================================================================================
{% from "forms.html" import input, textarea %}
--------------------------------------------------------------------------------

(source_file
  (from_statement
    (statement_begin)
    (from_keyword)
    template: (string)
    (import_keyword)
    (import_name
      name: (identifier))
    (import_name
      name: (identifier))
    (statement_end)))

================================================================================
From import with alias
================================================================================
{% from "forms.html" import input as inp %}
--------------------------------------------------------------------------------

(source_file
  (from_statement
    (statement_begin)
    (from_keyword)
    template: (string)
    (import_keyword)
    (import_name
      name: (identifier)
      (as_keyword)
      alias: (identifier))
    (statement_end)))

================================================================================
From import multiple with aliases
================================================================================
{% from "forms.html" import input as inp, textarea as ta %}
--------------------------------------------------------------------------------

(source_file
  (from_statement
    (statement_begin)
    (from_keyword)
    template: (string)
    (import_keyword)
    (import_name
      name: (identifier)
      (as_keyword)
      alias: (identifier))
    (import_name
      name: (identifier)
      (as_keyword)
      alias: (identifier))
    (statement_end)))

================================================================================
From import with context
================================================================================
{% from "forms.html" import input with context %}
--------------------------------------------------------------------------------

(source_file
  (from_statement
    (statement_begin)
    (from_keyword)
    template: (string)
    (import_keyword)
    (import_name
      name: (identifier))
    (with_context
      (with_keyword)
      (context_keyword))
    (statement_end)))

================================================================================
From import without context
================================================================================
{% from "forms.html" import input without context %}
--------------------------------------------------------------------------------

(source_file
  (from_statement
    (statement_begin)
    (from_keyword)
    template: (string)
    (import_keyword)
    (import_name
      name: (identifier))
    (without_context
      (without_keyword)
      (context_keyword))
    (statement_end)))

================================================================================
From import variable template
================================================================================
{% from template_name import input %}
--------------------------------------------------------------------------------

(source_file
  (from_statement
    (statement_begin)
    (from_keyword)
    template: (identifier)
    (import_keyword)
    (import_name
      name: (identifier))
    (statement_end)))
