test/corpus/identifier.txt
================================================================================
Simple identifier
================================================================================
{{ name }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (identifier)
    (print_end)))

================================================================================
Identifier with underscore prefix
================================================================================
{{ _name }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (identifier)
    (print_end)))

================================================================================
Identifier with numbers
================================================================================
{{ name123 }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (identifier)
    (print_end)))

================================================================================
Identifier with underscore and numbers
================================================================================
{{ _name_123 }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (identifier)
    (print_end)))

================================================================================
All uppercase
================================================================================
{{ NAME }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (identifier)
    (print_end)))

================================================================================
Mixed case
================================================================================
{{ NaMe }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (identifier)
    (print_end)))
