test/corpus/if_statement.txt
================================================================================
Simple if
================================================================================
{% if x %}yes{% endif %}
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (if_open
      (statement_begin)
      (if_keyword)
      condition: (identifier)
      (statement_end))
    (text)
    (if_close
      (statement_begin)
      (endif_keyword)
      (statement_end))))

================================================================================
If with else
================================================================================
{% if x %}yes{% else %}no{% endif %}
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (if_open
      (statement_begin)
      (if_keyword)
      condition: (identifier)
      (statement_end))
    (text)
    (else_clause
      (statement_begin)
      (else_keyword)
      (statement_end))
    (text)
    (if_close
      (statement_begin)
      (endif_keyword)
      (statement_end))))

================================================================================
If with elif
================================================================================
{% if x %}a{% elif y %}b{% endif %}
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (if_open
      (statement_begin)
      (if_keyword)
      condition: (identifier)
      (statement_end))
    (text)
    (elif_clause
      (statement_begin)
      (elif_keyword)
      condition: (identifier)
      (statement_end))
    (text)
    (if_close
      (statement_begin)
      (endif_keyword)
      (statement_end))))

================================================================================
If with elif and else
================================================================================
{% if x %}a{% elif y %}b{% else %}c{% endif %}
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (if_open
      (statement_begin)
      (if_keyword)
      condition: (identifier)
      (statement_end))
    (text)
    (elif_clause
      (statement_begin)
      (elif_keyword)
      condition: (identifier)
      (statement_end))
    (text)
    (else_clause
      (statement_begin)
      (else_keyword)
      (statement_end))
    (text)
    (if_close
      (statement_begin)
      (endif_keyword)
      (statement_end))))

================================================================================
Multiple elif
================================================================================
{% if a %}1{% elif b %}2{% elif c %}3{% endif %}
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (if_open
      (statement_begin)
      (if_keyword)
      condition: (identifier)
      (statement_end))
    (text)
    (elif_clause
      (statement_begin)
      (elif_keyword)
      condition: (identifier)
      (statement_end))
    (text)
    (elif_clause
      (statement_begin)
      (elif_keyword)
      condition: (identifier)
      (statement_end))
    (text)
    (if_close
      (statement_begin)
      (endif_keyword)
      (statement_end))))

================================================================================
Empty if body
================================================================================
{% if x %}{% endif %}
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (if_open
      (statement_begin)
      (if_keyword)
      condition: (identifier)
      (statement_end))
    (if_close
      (statement_begin)
      (endif_keyword)
      (statement_end))))

================================================================================
If with expression condition
================================================================================
{% if x > 0 %}positive{% endif %}
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (if_open
      (statement_begin)
      (if_keyword)
      condition: (binary_expression
        left: (identifier)
        right: (number))
      (statement_end))
    (text)
    (if_close
      (statement_begin)
      (endif_keyword)
      (statement_end))))

================================================================================
Nested if
================================================================================
{% if x %}{% if y %}inner{% endif %}{% endif %}
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (if_open
      (statement_begin)
      (if_keyword)
      condition: (identifier)
      (statement_end))
    (if_statement
      (if_open
        (statement_begin)
        (if_keyword)
        condition: (identifier)
        (statement_end))
      (text)
      (if_close
        (statement_begin)
        (endif_keyword)
        (statement_end)))
    (if_close
      (statement_begin)
      (endif_keyword)
      (statement_end))))

================================================================================
If with print inside
================================================================================
{% if x %}{{ y }}{% endif %}
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (if_open
      (statement_begin)
      (if_keyword)
      condition: (identifier)
      (statement_end))
    (print
      (print_begin)
      (identifier)
      (print_end))
    (if_close
      (statement_begin)
      (endif_keyword)
      (statement_end))))

================================================================================
Macro inside if
================================================================================
{% if x %}{% macro greet(name) %}hi{% endmacro %}{% endif %}
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (if_open
      (statement_begin)
      (if_keyword)
      condition: (identifier)
      (statement_end))
    (macro_statement
      (macro_open
        (statement_begin)
        (macro_keyword)
        name: (identifier)
        (parameter
          name: (identifier))
        (statement_end))
      (text)
      (macro_close
        (statement_begin)
        (endmacro_keyword)
        (statement_end)))
    (if_close
      (statement_begin)
      (endif_keyword)
      (statement_end))))

================================================================================
Do statement inside if
================================================================================
{% if x %}{% do list.append(1) %}{% endif %}
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (if_open
      (statement_begin)
      (if_keyword)
      condition: (identifier)
      (statement_end))
    (do_statement
      (statement_begin)
      (do_keyword)
      expression: (method_call
        object: (identifier)
        method: (identifier)
        positional_argument: (number))
      (statement_end))
    (if_close
      (statement_begin)
      (endif_keyword)
      (statement_end))))

================================================================================
Raw block inside if
================================================================================
{% if x %}{% raw %}{{ literal }}{% endraw %}{% endif %}
--------------------------------------------------------------------------------

(source_file
  (if_statement
    (if_open
      (statement_begin)
      (if_keyword)
      condition: (identifier)
      (statement_end))
    (raw_statement
      (raw_open
        (statement_begin)
        (raw_keyword)
        (statement_end))
      (raw_content)
      (raw_close
        (statement_begin)
        (endraw_keyword)
        (statement_end)))
    (if_close
      (statement_begin)
      (endif_keyword)
      (statement_end))))
